--- a/DevKit/packages.config
+++ b/DevKit/packages.config
@@ -1,14 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="DotNetty.Buffers" version="0.7.6" targetFramework="net48" />
-  <package id="DotNetty.Codecs" version="0.7.6" targetFramework="net48" />
-  <package id="DotNetty.Codecs.Http" version="0.7.6" targetFramework="net48" />
-  <package id="DotNetty.Common" version="0.7.6" targetFramework="net48" />
-  <package id="DotNetty.Handlers" version="0.7.6" targetFramework="net48" />
-  <package id="DotNetty.Transport" version="0.7.6" targetFramework="net48" />
   <package id="DryIoc.dll" version="4.7.7" targetFramework="net48" />
   <package id="HandyControl" version="3.5.1" targetFramework="net48" />
-  <package id="Libuv" version="1.10.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net48" />
@@ -17,7 +10,6 @@
   <package id="Microsoft.Extensions.Options" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.Primitives" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net48" />
-  <package id="Microsoft.Web.WebView2" version="1.0.2903.40" targetFramework="net48" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.1.31" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Prism.Core" version="8.1.97" targetFramework="net48" />
@@ -37,5 +29,6 @@
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="TouchSocket" version="3.0.6" targetFramework="net48" />
   <package id="TouchSocket.Core" version="3.0.6" targetFramework="net48" />
+  <package id="TouchSocket.Http" version="3.0.6" targetFramework="net48" />
   <package id="sqlite-net-pcl" version="1.9.172" targetFramework="net48" />
 </packages>
