--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -110,6 +110,9 @@
       <HintPath>..\packages\System.Diagnostics.DiagnosticSource.5.0.0\lib\net46\System.Diagnostics.DiagnosticSource.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Ports, Version=8.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.IO.Ports.8.0.0\lib\net462\System.IO.Ports.dll</HintPath>
+    </Reference>
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -141,6 +144,9 @@
     </Reference>
     <Reference Include="TouchSocket.Http, Version=3.0.6.0, Culture=neutral, PublicKeyToken=ecea290704fb8ddd, processorArchitecture=MSIL">
       <HintPath>..\packages\TouchSocket.Http.3.0.6\lib\net472\TouchSocket.Http.dll</HintPath>
+    </Reference>
+    <Reference Include="TouchSocket.SerialPorts, Version=3.0.6.0, Culture=neutral, PublicKeyToken=b0dfdf1c6b51c716, processorArchitecture=MSIL">
+      <HintPath>..\packages\TouchSocket.SerialPorts.3.0.6\lib\net472\TouchSocket.SerialPorts.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -203,7 +209,7 @@
     <Compile Include="ViewModels\GenerateIconViewModel.cs" />
     <Compile Include="ViewModels\LoadingDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
-    <Compile Include="ViewModels\SerialPortCommunicateViewModel.cs" />
+    <Compile Include="ViewModels\SerialPortViewModel.cs" />
     <Compile Include="ViewModels\TcpClientViewModel.cs" />
     <Compile Include="ViewModels\TcpServerViewModel.cs" />
     <Compile Include="ViewModels\TranscodingViewModel.cs" />
@@ -227,8 +233,8 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Views\SerialPortCommunicateView.xaml.cs">
-      <DependentUpon>SerialPortCommunicateView.xaml</DependentUpon>
+    <Compile Include="Views\SerialPortView.xaml.cs">
+      <DependentUpon>SerialPortView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TcpClientView.xaml.cs">
       <DependentUpon>TcpClientView.xaml</DependentUpon>
@@ -283,7 +289,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\SerialPortCommunicateView.xaml" />
+    <Page Include="Views\SerialPortView.xaml" />
     <Page Include="Views\TcpClientView.xaml" />
     <Page Include="Views\TcpServerView.xaml" />
     <Page Include="Views\TranscodingView.xaml" />
