--- a/DevKit/packages.config
+++ b/DevKit/packages.config
@@ -22,6 +22,7 @@
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net48" />
+  <package id="System.IO.Ports" version="8.0.0" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
@@ -30,5 +31,6 @@
   <package id="TouchSocket" version="3.0.6" targetFramework="net48" />
   <package id="TouchSocket.Core" version="3.0.6" targetFramework="net48" />
   <package id="TouchSocket.Http" version="3.0.6" targetFramework="net48" />
+  <package id="TouchSocket.SerialPorts" version="3.0.6" targetFramework="net48" />
   <package id="sqlite-net-pcl" version="1.9.172" targetFramework="net48" />
 </packages>
