--- a/DevKit/packages.config
+++ b/DevKit/packages.config
@@ -33,5 +33,6 @@
   <package id="TouchSocket.Core" version="3.0.6" targetFramework="net48" />
   <package id="TouchSocket.Http" version="3.0.6" targetFramework="net48" />
   <package id="TouchSocket.SerialPorts" version="3.0.6" targetFramework="net48" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net48" />
   <package id="sqlite-net-pcl" version="1.9.172" targetFramework="net48" />
 </packages>
