--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Cache\ColorResourceCache.cs" />
     <Compile Include="Cache\ExCommandCache.cs" />
     <Compile Include="Cache\ClientConfigCache.cs" />
+    <Compile Include="Cache\ClientMessageCache.cs" />
     <Compile Include="Converters\ColorTagForegroundConverter.cs" />
     <Compile Include="Converters\DeleteExCmdBtnVisibleConverter.cs" />
     <Compile Include="Converters\ListenStateConverter.cs" />
