--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -176,6 +176,7 @@
     <Compile Include="Cache\ClientConfigCache.cs" />
     <Compile Include="Cache\ClientMessageCache.cs" />
     <Compile Include="Converters\ColorTagForegroundConverter.cs" />
+    <Compile Include="Converters\ConnectStateConverter.cs" />
     <Compile Include="Converters\DeleteExCmdBtnVisibleConverter.cs" />
     <Compile Include="Converters\ListenStateConverter.cs" />
     <Compile Include="Converters\MessageCountConverter.cs" />
