--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Converters\MessageTagBgConverter.cs" />
     <Compile Include="Converters\MessageTagConverter.cs" />
     <Compile Include="Converters\MessageTypeConverter.cs" />
+    <Compile Include="Converters\SerialPortStateConverter.cs" />
     <Compile Include="DataService\AppDataServiceImpl.cs" />
     <Compile Include="DataService\IAppDataService.cs" />
     <Compile Include="Dialogs\CreateKeyDialog.xaml.cs">
