--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Cache\ExCommandCache.cs" />
     <Compile Include="Cache\ClientConfigCache.cs" />
     <Compile Include="Cache\ClientMessageCache.cs" />
+    <Compile Include="Converters\AlphaValueConverter.cs" />
     <Compile Include="Converters\ColorTagForegroundConverter.cs" />
     <Compile Include="Converters\ConnectStateConverter.cs" />
     <Compile Include="Converters\DeleteExCmdBtnVisibleConverter.cs" />
