--- a/DevKit/packages.config
+++ b/DevKit/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="DryIoc.dll" version="4.7.7" targetFramework="net48" />
   <package id="HandyControl" version="3.5.1" targetFramework="net48" />
+  <package id="Hardcodet.NotifyIcon.Wpf" version="2.0.1" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection" version="5.0.0" targetFramework="net48" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="5.0.0" targetFramework="net48" />
