build(DevKit): 添加构建发布脚本
- 在 DevKit项目中添加了 build_release_script.bat 文件
- 将该文件配置为 Content 类型，确保在构建时被复制到输出目录

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -304,5 +304,8 @@
   <ItemGroup>
     <Resource Include="Images\empty.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Shell\build_release_script.bat" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
