feat(DevKit): 添加构建发布脚本和安装程序
- 新增 build_release_script.bat 文件，用于构建发布版本
- 在项目中添加 DevKit.iss 文件，用于生成安装程序
- 更新 DevKit.csproj，包含新增的构建脚本和安装程序文件

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -306,6 +306,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Shell\build_release_script.bat" />
+    <Content Include="Shell\DevKit.iss" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
