feat(Android工具): 添加 Android 工具列表功能
- 新增 GetAndroidTools 方法替代 GetMainMenu
- 实现 Android 工具列表的数据显示和样式
- 添加列表项双击事件处理
- 重构 MainWindowViewModel，移除不必要的导航逻辑

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Utils\AutoScrollToBottomBehavior.cs" />
     <Compile Include="Utils\CommandExecutor.cs" />
     <Compile Include="Utils\DataBaseConnection.cs" />
+    <Compile Include="Utils\ListBoxItemMarginBehavior.cs" />
     <Compile Include="Utils\MethodExtensions.cs" />
     <Compile Include="Utils\PasswordAttachAttribute.cs" />
     <Compile Include="Utils\ConnectionType.cs" />
