feat(DevKit): 实现主题切换功能
- 在 App.xaml 中添加了 Light 和 Dark 主题的资源字典
- 在 App.xaml.cs 中实现了 SwitchTheme 方法，用于切换主题
- 新增了 ColorBrushes.xaml、DarkColor.xaml 和 LightColor.xaml 文件，定义了主题颜色
- 更新了 MainWindow.xaml 中的样式，使用动态资源引用以支持主题切换

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -269,6 +269,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Page Include="Colors\ColorBrushes.xaml" />
+    <Page Include="Colors\DarkColor.xaml" />
+    <Page Include="Colors\LightColor.xaml" />
     <Page Include="Dialogs\CreateKeyDialog.xaml" />
     <Page Include="Dialogs\ExCommandDialog.xaml" />
     <Page Include="Dialogs\LoadingDialog.xaml" />
