feat(AndroidDebugBridge): 添加右侧面板展开和隐藏功能
- 在 AndroidDebugBridgeView.xaml 中添加了右侧面板的布局和初始状态
- 在 AndroidDebugBridgeView.xaml.cs 中实现了右侧面板的展开和隐藏逻辑
- 在 AndroidDebugBridgeViewModel.cs 中添加了触发右侧面板展开和隐藏的事件- 新增 ResizeGridWidthEvent.cs 文件用于传递展开和隐藏事件

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -188,6 +188,7 @@
       <DependentUpon>ScreenShotListDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Events\CloseLoadingDialogEvent.cs" />
+    <Compile Include="Events\ResizeGridWidthEvent.cs" />
     <Compile Include="Models\AsciiCodeModel.cs" />
     <Compile Include="Models\ColorModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
