refactor(DevKit):调整 ADB 界面布局并移除软件管理功能
- 调整 Grid 列宽比例，优化界面布局
-移除软件管理按钮和相关命令
- 添加 GridLengthAnimation 类，用于界面动画效果
- 注释掉右侧面板展开/隐藏的代码

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -200,6 +200,7 @@
     <Compile Include="Utils\AutoScrollToBottomBehavior.cs" />
     <Compile Include="Utils\CommandExecutor.cs" />
     <Compile Include="Utils\DataBaseConnection.cs" />
+    <Compile Include="Utils\GridLengthAnimation.cs" />
     <Compile Include="Utils\ListBoxItemMarginBehavior.cs" />
     <Compile Include="Utils\MethodExtensions.cs" />
     <Compile Include="Utils\PasswordAttachAttribute.cs" />
