feat(APK): 重构应用包视图和ViewModel
- 更新了 ApplicationPackageView.xaml 的布局和样式
- 重构了 ApplicationPackageViewModel.cs 的代码结构
- 新增 ApkFileModel 类用于表示 APK 文件信息
- 移除了未使用的 AsciiCodeModel 和 PlatformImageTypeModel 类
- 更新了相关的数据服务接口和实现

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -189,11 +189,10 @@
     </Compile>
     <Compile Include="Events\CloseLoadingDialogEvent.cs" />
     <Compile Include="Events\ResizeGridWidthEvent.cs" />
-    <Compile Include="Models\AsciiCodeModel.cs" />
+    <Compile Include="Models\ApkFileModel.cs" />
     <Compile Include="Models\ColorModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\MainMenuModel.cs" />
-    <Compile Include="Models\PlatformImageTypeModel.cs" />
     <Compile Include="Models\ConnectedClientModel.cs" />
     <Compile Include="Models\ScreenshotModel.cs" />
     <Compile Include="Utils\ArgumentCreator.cs" />
@@ -305,6 +304,7 @@
     <Resource Include="Images\empty.png" />
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Images\apk.png" />
     <Content Include="Shell\build_release_script.bat" />
     <Content Include="Shell\DevKit.iss" />
   </ItemGroup>
