feat(DevKit): 添加数据网格样式并优化 TCP 客户端视图
- 在 App.xaml 中添加了新的 ResourceDictionary 文件
- 新增 DataGridColumnHeaderStyle.xaml 和 DataGridTextColumnStyle.xaml 文件- 更新了 TcpClientView.xaml 中的数据网格配置
- 调整了 TcpClientView.xaml 中的布局，增加了列宽和间距

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -277,6 +277,8 @@
     <Page Include="Dialogs\ExCommandDialog.xaml" />
     <Page Include="Dialogs\LoadingDialog.xaml" />
     <Page Include="Dialogs\ScreenShotListDialog.xaml" />
+    <Page Include="Styles\DataGridColumnHeaderStyle.xaml" />
+    <Page Include="Styles\DataGridTextColumnStyle.xaml" />
     <Page Include="Views\AndroidDebugBridgeView.xaml" />
     <Page Include="Views\ApplicationPackageView.xaml" />
     <Page Include="Views\ColorResourceView.xaml" />
