refactor(DevKit): 重构 TCP 客户端通信日志功能
- 新增 LogModel 类用于通信日志记录
- 修改 TcpClientViewModel 中的消息集合为日志集合
- 更新 TcpClientView 中的消息列表绑定到日志集合
- 优化通信日志更新逻辑，支持发送和接收消息的区分
- 移除不必要的代码和注释，提高代码可读性

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -191,6 +191,7 @@
     <Compile Include="Events\ResizeGridWidthEvent.cs" />
     <Compile Include="Models\ApkFileModel.cs" />
     <Compile Include="Models\ColorModel.cs" />
+    <Compile Include="Models\LogModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\MainMenuModel.cs" />
     <Compile Include="Models\ConnectedClientModel.cs" />
