feat(Dialog): 新增指令脚本编辑对话框并优化其他对话框样式
- 新增 CommandScriptDialog 用于编辑指令脚本
- 优化 CreateKeyDialog、ExCommandDialog、LoadingDialog 和 ScreenShotListDialog 的样式
- 在 TcpClientViewModel 中添加打开指令脚本对话框的功能
- 调整部分对话框的背景色和边框样式

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -175,6 +175,9 @@
     <Compile Include="Converters\SerialPortStateConverter.cs" />
     <Compile Include="DataService\AppDataServiceImpl.cs" />
     <Compile Include="DataService\IAppDataService.cs" />
+    <Compile Include="Dialogs\CommandScriptDialog.xaml.cs">
+      <DependentUpon>CommandScriptDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialogs\CreateKeyDialog.xaml.cs">
       <DependentUpon>CreateKeyDialog.xaml</DependentUpon>
     </Compile>
@@ -208,6 +211,7 @@
     <Compile Include="ViewModels\AndroidDebugBridgeViewModel.cs" />
     <Compile Include="ViewModels\ApplicationPackageViewModel.cs" />
     <Compile Include="ViewModels\ColorResourceViewModel.cs" />
+    <Compile Include="ViewModels\CommandScriptDialogViewModel.cs" />
     <Compile Include="ViewModels\CreateKeyDialogViewModel.cs" />
     <Compile Include="ViewModels\ExCommandDialogViewModel.cs" />
     <Compile Include="ViewModels\LoadingDialogViewModel.cs" />
@@ -274,6 +278,7 @@
     <Page Include="Colors\ColorBrushes.xaml" />
     <Page Include="Colors\DarkColor.xaml" />
     <Page Include="Colors\LightColor.xaml" />
+    <Page Include="Dialogs\CommandScriptDialog.xaml" />
     <Page Include="Dialogs\CreateKeyDialog.xaml" />
     <Page Include="Dialogs\ExCommandDialog.xaml" />
     <Page Include="Dialogs\LoadingDialog.xaml" />
