refactor(DevKit): 重构客户端模型并优化WebSocket支持
- 将 ConnectedClientModel 重命名为 SocketClientModel，简化为 ClientModel
- 新增 WebSocketClientModel继承自 SocketClientModel，用于处理 WebSocket 连接
- 更新相关视图和视图模型以使用新的客户端模型
- 优化 WebSocket 服务器视图模型，支持 WebSocket 特定功能

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -195,8 +195,9 @@
     <Compile Include="Models\LogModel.cs" />
     <Compile Include="Models\MessageModel.cs" />
     <Compile Include="Models\MainMenuModel.cs" />
-    <Compile Include="Models\ConnectedClientModel.cs" />
+    <Compile Include="Models\SocketClientModel.cs" />
     <Compile Include="Models\ScreenshotModel.cs" />
+    <Compile Include="Models\WebSocketClientModel.cs" />
     <Compile Include="Utils\ArgumentCreator.cs" />
     <Compile Include="Utils\AutoScrollToBottomBehavior.cs" />
     <Compile Include="Utils\CommandExecutor.cs" />
