--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -126,9 +126,6 @@
     <Reference Include="System.Threading.Tasks.Extensions, Version=4.2.0.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Threading.Tasks.Extensions.4.5.4\lib\net461\System.Threading.Tasks.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
-    </Reference>
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
@@ -136,14 +133,14 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="TouchSocket, Version=3.0.6.0, Culture=neutral, PublicKeyToken=5f39d7da98dac6a9, processorArchitecture=MSIL">
-      <HintPath>..\packages\TouchSocket.3.0.6\lib\net472\TouchSocket.dll</HintPath>
+    <Reference Include="TouchSocket, Version=3.1.0.0, Culture=neutral, PublicKeyToken=5f39d7da98dac6a9, processorArchitecture=MSIL">
+      <HintPath>..\packages\TouchSocket.3.1.0\lib\net472\TouchSocket.dll</HintPath>
     </Reference>
-    <Reference Include="TouchSocket.Core, Version=3.0.6.0, Culture=neutral, PublicKeyToken=d6c415a2f58eda72, processorArchitecture=MSIL">
-      <HintPath>..\packages\TouchSocket.Core.3.0.6\lib\net472\TouchSocket.Core.dll</HintPath>
+    <Reference Include="TouchSocket.Core, Version=3.1.0.0, Culture=neutral, PublicKeyToken=d6c415a2f58eda72, processorArchitecture=MSIL">
+      <HintPath>..\packages\TouchSocket.Core.3.1.0\lib\net472\TouchSocket.Core.dll</HintPath>
     </Reference>
-    <Reference Include="TouchSocket.Http, Version=3.0.6.0, Culture=neutral, PublicKeyToken=ecea290704fb8ddd, processorArchitecture=MSIL">
-      <HintPath>..\packages\TouchSocket.Http.3.0.6\lib\net472\TouchSocket.Http.dll</HintPath>
+    <Reference Include="TouchSocket.Http, Version=3.1.0.0, Culture=neutral, PublicKeyToken=ecea290704fb8ddd, processorArchitecture=MSIL">
+      <HintPath>..\packages\TouchSocket.Http.3.1.0\lib\net472\TouchSocket.Http.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
@@ -300,9 +297,6 @@
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <ItemGroup>
-    <Analyzer Include="..\packages\TouchSocket.Core.3.0.6\analyzers\dotnet\cs\TouchSocket.Core.SourceGenerator.dll" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Images\empty.png" />
   </ItemGroup>
   <ItemGroup>
@@ -310,5 +304,15 @@
     <Content Include="Shell\build_release_script.bat" />
     <Content Include="Shell\DevKit.iss" />
   </ItemGroup>
+  <ItemGroup>
+    <Analyzer Include="..\packages\TouchSocket.Core.3.1.0\analyzers\dotnet\cs\TouchSocket.Core.SourceGenerator.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets" Condition="Exists('..\packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105.The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\System.ValueTuple.4.6.1\build\net471\System.ValueTuple.targets'))" />
+  </Target>
 </Project>
