--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -160,6 +160,7 @@
     <Compile Include="Cache\ExCommandCache.cs" />
     <Compile Include="Cache\ClientConfigCache.cs" />
     <Compile Include="Converters\AlphaValueConverter.cs" />
+    <Compile Include="Converters\ButtonVisibilityConverter.cs" />
     <Compile Include="Converters\ColorTagForegroundConverter.cs" />
     <Compile Include="Converters\ConnectStateConverter.cs" />
     <Compile Include="Converters\ListenStateConverter.cs" />
