feat(net): 添加网络信息配置功能
- 注册NetConfigurationView及其ViewModel到导航容器- 在主菜单中添加"网络信息"入口
- 新增EnableStateConverter用于控制UI元素启用状态
- 创建NetConfigurationView视图及对应的ViewModel
- 实现网络命令执行功能，支持ipconfig和ping命令
- 添加目标地址输入框和测试按钮，支持域名解析
- 提供命令输出结果显示区域
- 使用CommandExecutor执行系统命令并捕获输出

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Converters\ButtonVisibilityConverter.cs" />
     <Compile Include="Converters\ColorTagForegroundConverter.cs" />
     <Compile Include="Converters\ConnectStateConverter.cs" />
+    <Compile Include="Converters\EnableStateConverter.cs" />
     <Compile Include="Converters\ListenStateConverter.cs" />
     <Compile Include="Converters\MessageCountConverter.cs" />
     <Compile Include="Converters\MessageTagBgConverter.cs" />
@@ -205,6 +206,7 @@
     <Compile Include="ViewModels\ExCommandDialogViewModel.cs" />
     <Compile Include="ViewModels\LoadingDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
+    <Compile Include="ViewModels\NetConfigurationViewModel.cs" />
     <Compile Include="ViewModels\ScreenShotListDialogViewModel.cs" />
     <Compile Include="ViewModels\TcpClientViewModel.cs" />
     <Compile Include="ViewModels\TcpServerViewModel.cs" />
@@ -224,6 +226,9 @@
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Views\NetConfigurationView.xaml.cs">
+      <DependentUpon>NetConfigurationView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TcpClientView.xaml.cs">
       <DependentUpon>TcpClientView.xaml</DependentUpon>
@@ -278,6 +283,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Views\NetConfigurationView.xaml" />
     <Page Include="Views\TcpClientView.xaml" />
     <Page Include="Views\TcpServerView.xaml" />
     <Page Include="Views\UdpClientView.xaml" />
