--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -159,6 +159,7 @@
     <Compile Include="Cache\ColorResourceCache.cs" />
     <Compile Include="Cache\ExCommandCache.cs" />
     <Compile Include="Cache\ClientConfigCache.cs" />
+    <Compile Include="Cache\SdkConfigCache.cs" />
     <Compile Include="Converters\AlphaValueConverter.cs" />
     <Compile Include="Converters\ButtonVisibilityConverter.cs" />
     <Compile Include="Converters\ColorTagForegroundConverter.cs" />
@@ -204,6 +205,7 @@
     <Compile Include="ViewModels\ColorResourceViewModel.cs" />
     <Compile Include="ViewModels\CommandScriptDialogViewModel.cs" />
     <Compile Include="ViewModels\ExCommandDialogViewModel.cs" />
+    <Compile Include="ViewModels\JNIReverseViewModel.cs" />
     <Compile Include="ViewModels\LoadingDialogViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="ViewModels\NetConfigurationViewModel.cs" />
@@ -222,6 +224,9 @@
     </Compile>
     <Compile Include="Views\ColorResourceView.xaml.cs">
       <DependentUpon>ColorResourceView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\JNIReverseView.xaml.cs">
+      <DependentUpon>JNIReverseView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -279,6 +284,7 @@
     <Page Include="Views\AndroidDebugBridgeView.xaml" />
     <Page Include="Views\ApplicationPackageView.xaml" />
     <Page Include="Views\ColorResourceView.xaml" />
+    <Page Include="Views\JNIReverseView.xaml" />
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
