refactor(behaviors): 将行为类从Utils目录移动到Behaviors目录并优化颜色资源视图
- 将AutoScrollToBottomBehavior和ListBoxItemMarginBehavior从Utils目录移动到Behaviors目录
- 在ColorResourceView.xaml中为颜色输入框添加数值范围限制行为
- 为颜色输入框添加文本变化事件触发命令执行功能
- 更新项目文件中的引用路径和命名空间引用
- 修复颜色转换逻辑并重命名相关命令属性
- 在各个视图文件中更新行为类的命名空间引用

--- a/DevKit/DevKit.csproj
+++ b/DevKit/DevKit.csproj
@@ -155,6 +155,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Behaviors\AutoScrollToBottomBehavior.cs" />
+    <Compile Include="Behaviors\ListBoxItemMarginBehavior.cs" />
+    <Compile Include="Behaviors\NumericRangeBehavior.cs" />
     <Compile Include="Cache\ApkConfigCache.cs" />
     <Compile Include="Cache\ColorResourceCache.cs" />
     <Compile Include="Cache\ExCommandCache.cs" />
@@ -192,11 +195,9 @@
     <Compile Include="Models\UdpClientModel.cs" />
     <Compile Include="Models\WebSocketClientModel.cs" />
     <Compile Include="Utils\ArgumentCreator.cs" />
-    <Compile Include="Utils\AutoScrollToBottomBehavior.cs" />
     <Compile Include="Utils\CommandExecutor.cs" />
     <Compile Include="Utils\DataBaseConnection.cs" />
     <Compile Include="Utils\GridLengthAnimation.cs" />
-    <Compile Include="Utils\ListBoxItemMarginBehavior.cs" />
     <Compile Include="Utils\MethodExtensions.cs" />
     <Compile Include="Utils\PasswordAttachAttribute.cs" />
     <Compile Include="ViewModels\AndroidDebugBridgeViewModel.cs" />
